// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Section message examples > Default error section message should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-error v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="v-icon v-icon-visa v-icon-low v-icon-error v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M12 16C12.5523 16 13 16.4477 13 17C13 17.5523 12.5523 18 12 18C11.4477 18 11 17.5523 11 17C11 16.4477 11.4477 16 12 16ZM13 14H11V6H13V14Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples > Default informational section message should render correctly 1`] = `
<div>
  <div
    class="v-message v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="v-icon v-icon-visa v-icon-low v-icon-information v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M13.4121 17.0352H15V19H9V17.0352H11.4512V12.9873H9.43164V11.0225H13.4121V17.0352ZM12 5C13.2549 5 14.2646 6.02181 14.2646 7.26953C14.2646 8.51722 13.2549 9.53906 12 9.53906C10.7549 9.53906 9.73538 8.51722 9.73535 7.26953C9.73535 6.02181 10.7549 5 12 5ZM12 6.96484C11.8333 6.96484 11.6963 7.10251 11.6963 7.26953C11.6963 7.43652 11.8334 7.57422 12 7.57422C12.1666 7.57422 12.3037 7.43652 12.3037 7.26953C12.3037 7.10251 12.1667 6.96484 12 6.96484Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples > Default subtle section message should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-subtle v-section"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-visa v-icon-low v-icon-idea v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M16 22V24H8V22H16Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C17.63 0 21 4.58 21 9C21 12.66 18.7802 14.2104 17.4502 15.1504C17.1502 15.3604 16.86 15.56 16.71 15.71C16.23 16.18 16 17.59 16 20L15 21H9L8 20C8 18.0902 7.66999 16.0805 7.29004 15.7002C7.14004 15.5502 6.8498 15.3496 6.5498 15.1396C5.21977 14.2096 3 12.6597 3 9C3 4.58 6.37 0 12 0ZM12 2C7.45 2 5 5.61 5 9C5 11.62 6.5002 12.66 7.7002 13.5C8.08014 13.76 8.42999 14.0101 8.70996 14.29C9.64996 15.23 9.91047 17.53 9.98047 19H11V11H9V9H15V11H13V19H14.0098C14.0798 16.47 14.46 15.12 15.29 14.29C15.57 14.0101 15.9199 13.76 16.2998 13.5C17.4998 12.66 19 11.62 19 9C19 5.61 16.55 2 12 2Z"
      />
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples > Default success section message should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-success v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="v-icon v-icon-visa v-icon-low v-icon-success v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M18 9.39551L10.5723 17L7 13.3418L8.3623 11.9473L10.5723 14.209L16.6377 8L18 9.39551Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C18.6168 0 24 5.38317 24 12C24 18.6168 18.6168 24 12 24C5.38317 24 0 18.6168 0 12C0 5.38317 5.38317 0 12 0ZM12 2.18164C6.58647 2.18164 2.18164 6.58647 2.18164 12C2.18164 17.4141 6.58647 21.8184 12 21.8184C17.4141 21.8184 21.8184 17.4141 21.8184 12C21.8184 6.58647 17.4141 2.18164 12 2.18164Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples > Default warning section message should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-warning v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="v-icon v-icon-visa v-icon-low v-icon-warning v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M24 20.6602V23H0V20.6396L11.4102 0H13.7197L24 20.6602ZM2.08008 21H21.9297L12.5303 2.09961L2.08008 21Z"
      />
      <path
        class="v-icon-primary"
        d="M13.5 17.002V19.002H11.5V17.002H13.5ZM13.5 8.00195V15.002H11.5V8.00195H13.5Z"
      />
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples > Empty error section message should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-error v-section"
  />
</div>
`;

exports[`Section message examples > Empty informational section message should render correctly 1`] = `
<div>
  <div
    class="v-message v-section"
  />
</div>
`;

exports[`Section message examples > Empty subtle section message should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-subtle v-section"
  />
</div>
`;

exports[`Section message examples > Empty success section message should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-success v-section"
  />
</div>
`;

exports[`Section message examples > Empty warning section message should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-warning v-section"
  />
</div>
`;

exports[`Section message examples > Error section message with button should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-error v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="v-icon v-icon-visa v-icon-low v-icon-error v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M12 16C12.5523 16 13 16.4477 13 17C13 17.5523 12.5523 18 12 18C11.4477 18 11 17.5523 11 17C11 16.4477 11.4477 16 12 16ZM13 14H11V6H13V14Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content"
    >
      <p
        class="v-mb-8"
      >
        This is required text that describes the section message in more detail.
      </p>
      <button
        class="v-button v-button-secondary"
      >
        Primary action
      </button>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples > Error section message with link should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-error v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="v-icon v-icon-visa v-icon-low v-icon-error v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M12 16C12.5523 16 13 16.4477 13 17C13 17.5523 12.5523 18 12 18C11.4477 18 11 17.5523 11 17C11 16.4477 11.4477 16 12 16ZM13 14H11V6H13V14Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content"
    >
      <p
        class="v-mb-8"
      >
        This is required text that describes the section message in more detail.
      </p>
      <a
        class="v-link"
        href="./section-message"
      >
        Destination label
      </a>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples > Error section message with title should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-error v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="v-icon v-icon-visa v-icon-low v-icon-error v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M12 16C12.5523 16 13 16.4477 13 17C13 17.5523 12.5523 18 12 18C11.4477 18 11 17.5523 11 17C11 16.4477 11.4477 16 12 16ZM13 14H11V6H13V14Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <h4
        class="v-typography-body-2-bold"
      >
        Error title
      </h4>
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples > Error section message without close icon button should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-error v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="v-icon v-icon-visa v-icon-low v-icon-error v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M12 16C12.5523 16 13 16.4477 13 17C13 17.5523 12.5523 18 12 18C11.4477 18 11 17.5523 11 17C11 16.4477 11.4477 16 12 16ZM13 14H11V6H13V14Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
  </div>
</div>
`;

exports[`Section message examples > Informational section message with button should render correctly 1`] = `
<div>
  <div
    class="v-message v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="v-icon v-icon-visa v-icon-low v-icon-information v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M13.4121 17.0352H15V19H9V17.0352H11.4512V12.9873H9.43164V11.0225H13.4121V17.0352ZM12 5C13.2549 5 14.2646 6.02181 14.2646 7.26953C14.2646 8.51722 13.2549 9.53906 12 9.53906C10.7549 9.53906 9.73538 8.51722 9.73535 7.26953C9.73535 6.02181 10.7549 5 12 5ZM12 6.96484C11.8333 6.96484 11.6963 7.10251 11.6963 7.26953C11.6963 7.43652 11.8334 7.57422 12 7.57422C12.1666 7.57422 12.3037 7.43652 12.3037 7.26953C12.3037 7.10251 12.1667 6.96484 12 6.96484Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content"
    >
      <p
        class="v-mb-8"
      >
        This is required text that describes the section message in more detail.
      </p>
      <button
        class="v-button v-button-secondary"
      >
        Primary action
      </button>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples > Informational section message with link should render correctly 1`] = `
<div>
  <div
    class="v-message v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="v-icon v-icon-visa v-icon-low v-icon-information v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M13.4121 17.0352H15V19H9V17.0352H11.4512V12.9873H9.43164V11.0225H13.4121V17.0352ZM12 5C13.2549 5 14.2646 6.02181 14.2646 7.26953C14.2646 8.51722 13.2549 9.53906 12 9.53906C10.7549 9.53906 9.73538 8.51722 9.73535 7.26953C9.73535 6.02181 10.7549 5 12 5ZM12 6.96484C11.8333 6.96484 11.6963 7.10251 11.6963 7.26953C11.6963 7.43652 11.8334 7.57422 12 7.57422C12.1666 7.57422 12.3037 7.43652 12.3037 7.26953C12.3037 7.10251 12.1667 6.96484 12 6.96484Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content"
    >
      <p
        class="v-mb-8"
      >
        This is required text that describes the section message in more detail.
      </p>
      <a
        class="v-link"
        href="./section-message"
      >
        Destination label
      </a>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples > Informational section message with title should render correctly 1`] = `
<div>
  <div
    class="v-message v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="v-icon v-icon-visa v-icon-low v-icon-information v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M13.4121 17.0352H15V19H9V17.0352H11.4512V12.9873H9.43164V11.0225H13.4121V17.0352ZM12 5C13.2549 5 14.2646 6.02181 14.2646 7.26953C14.2646 8.51722 13.2549 9.53906 12 9.53906C10.7549 9.53906 9.73538 8.51722 9.73535 7.26953C9.73535 6.02181 10.7549 5 12 5ZM12 6.96484C11.8333 6.96484 11.6963 7.10251 11.6963 7.26953C11.6963 7.43652 11.8334 7.57422 12 7.57422C12.1666 7.57422 12.3037 7.43652 12.3037 7.26953C12.3037 7.10251 12.1667 6.96484 12 6.96484Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <h4
        class="v-typography-body-2-bold"
      >
        Informational title
      </h4>
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples > Informational section message without close icon button should render correctly 1`] = `
<div>
  <div
    class="v-message v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="v-icon v-icon-visa v-icon-low v-icon-information v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M13.4121 17.0352H15V19H9V17.0352H11.4512V12.9873H9.43164V11.0225H13.4121V17.0352ZM12 5C13.2549 5 14.2646 6.02181 14.2646 7.26953C14.2646 8.51722 13.2549 9.53906 12 9.53906C10.7549 9.53906 9.73538 8.51722 9.73535 7.26953C9.73535 6.02181 10.7549 5 12 5ZM12 6.96484C11.8333 6.96484 11.6963 7.10251 11.6963 7.26953C11.6963 7.43652 11.8334 7.57422 12 7.57422C12.1666 7.57422 12.3037 7.43652 12.3037 7.26953C12.3037 7.10251 12.1667 6.96484 12 6.96484Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
  </div>
</div>
`;

exports[`Section message examples > Reusable section message should render correctly 1`] = `
<div>
  <div>
    <div
      class="v-message v-message-success v-section"
    >
      <svg
        aria-hidden="false"
        aria-label="Success"
        class="v-icon v-icon-visa v-icon-low v-icon-success v-message-icon"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          d="M18 9.39551L10.5723 17L7 13.3418L8.3623 11.9473L10.5723 14.209L16.6377 8L18 9.39551Z"
        />
        <path
          class="v-icon-primary"
          d="M12 0C18.6168 0 24 5.38317 24 12C24 18.6168 18.6168 24 12 24C5.38317 24 0 18.6168 0 12C0 5.38317 5.38317 0 12 0ZM12 2.18164C6.58647 2.18164 2.18164 6.58647 2.18164 12C2.18164 17.4141 6.58647 21.8184 12 21.8184C17.4141 21.8184 21.8184 17.4141 21.8184 12C21.8184 6.58647 17.4141 2.18164 12 2.18164Z"
        />
        <defs>
          <clippath>
            <rect
              height="24"
              width="24"
            />
          </clippath>
        </defs>
      </svg>
      <div
        class="v-message-content v-pb-2 v-pl-2"
      >
        <h4
          class="v-typography-body-2-bold"
        >
          Success title
        </h4>
        <p>
          This is required text that describes the section message in more detail.
        </p>
      </div>
      <button
        aria-label="close"
        class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-close"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
          />
          <defs>
            <clippath>
              <rect
                height="16"
                transform="translate(0 0.000488281)"
                width="16"
              />
            </clippath>
          </defs>
        </svg>
      </button>
    </div>
    <div
      style="margin-top: 24px;"
    >
      <details
        class="v-accordion"
        id="test-id-0"
      >
        <summary
          class="v-button v-button-large v-button-secondary v-accordion-heading v-gap-2 v-typography-body-2-medium"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          <div
            class="v-align-items-center v-flex v-gap-6"
          >
            Customize demo
          </div>
        </summary>
        <div
          class="v-accordion-panel v-px-32"
        >
          <form>
            <div
              class="v-flex v-flex-col v-gap-16"
              style="margin-bottom: 32px;"
            >
              <div
                class="v-flex v-flex-col v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-1-input"
                >
                  Button label
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <input
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-1-input"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="v-flex v-flex-col v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-2-input"
                >
                  Description
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <input
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-2-input"
                      type="text"
                      value="This is required text that describes the section message in more detail."
                    />
                  </div>
                </div>
              </div>
              <div
                class="v-flex v-flex-col v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-3-input"
                >
                  Href
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <input
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-3-input"
                      type="text"
                      value="www.visa.com"
                    />
                  </div>
                </div>
              </div>
              <div
                class="v-flex v-flex-col v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-4-input"
                >
                  Link label
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <input
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-4-input"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="v-flex v-flex-col v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-5-input"
                >
                  Title
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <input
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-5-input"
                      type="text"
                      value="Success title"
                    />
                  </div>
                </div>
              </div>
              <div
                class="v-flex v-flex-col v-flex-wrap v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-6-select"
                  id="test-id-6-label"
                >
                  Message type
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <select
                      aria-describedby="test-id-6-message"
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-6-select"
                    >
                      <option
                        hidden=""
                      />
                      <option
                        value="success"
                      >
                        Success
                      </option>
                      <option
                        value="information"
                      >
                        Information
                      </option>
                      <option
                        value="warning"
                      >
                        Warning
                      </option>
                      <option
                        value="error"
                      >
                        Error
                      </option>
                      <option
                        value="subtle"
                      >
                        Subtle
                      </option>
                    </select>
                    <svg
                      aria-hidden="true"
                      class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="v-icon-primary"
                        d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                      />
                    </svg>
                  </div>
                  <span
                    class="v-input-message"
                    id="test-id-6-message"
                  />
                </div>
              </div>
              <div
                class="v-flex v-flex-col v-flex-wrap v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-7-select"
                  id="test-id-7-label"
                >
                  Title level
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <select
                      aria-describedby="test-id-7-message"
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-7-select"
                    >
                      <option
                        hidden=""
                      />
                      <option
                        value="h1"
                      >
                        1
                      </option>
                      <option
                        value="h2"
                      >
                        2
                      </option>
                      <option
                        value="h3"
                      >
                        3
                      </option>
                      <option
                        value="h4"
                      >
                        4
                      </option>
                      <option
                        value="h5"
                      >
                        5
                      </option>
                      <option
                        value="h6"
                      >
                        6
                      </option>
                    </select>
                    <svg
                      aria-hidden="true"
                      class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="v-icon-primary"
                        d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                      />
                    </svg>
                  </div>
                  <span
                    class="v-input-message"
                    id="test-id-7-message"
                  />
                </div>
              </div>
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  checked=""
                  class="v-checkbox"
                  id="test-id-8-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-8-input"
                  >
                    Dismissible
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-8-message"
              />
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  checked=""
                  class="v-checkbox"
                  id="test-id-9-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-9-input"
                  >
                    Show icon
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-9-message"
              />
            </div>
            <div
              class="v-flex v-gap-16"
              style="margin-bottom: 16px;"
            >
              <button
                class="v-button"
                type="submit"
              >
                Apply
              </button>
              <button
                class="v-button v-button-secondary"
                type="button"
              >
                Reset
              </button>
            </div>
          </form>
        </div>
      </details>
    </div>
  </div>
</div>
`;

exports[`Section message examples > Subtle section message with button should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-subtle v-section"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-visa v-icon-low v-icon-idea v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M16 22V24H8V22H16Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C17.63 0 21 4.58 21 9C21 12.66 18.7802 14.2104 17.4502 15.1504C17.1502 15.3604 16.86 15.56 16.71 15.71C16.23 16.18 16 17.59 16 20L15 21H9L8 20C8 18.0902 7.66999 16.0805 7.29004 15.7002C7.14004 15.5502 6.8498 15.3496 6.5498 15.1396C5.21977 14.2096 3 12.6597 3 9C3 4.58 6.37 0 12 0ZM12 2C7.45 2 5 5.61 5 9C5 11.62 6.5002 12.66 7.7002 13.5C8.08014 13.76 8.42999 14.0101 8.70996 14.29C9.64996 15.23 9.91047 17.53 9.98047 19H11V11H9V9H15V11H13V19H14.0098C14.0798 16.47 14.46 15.12 15.29 14.29C15.57 14.0101 15.9199 13.76 16.2998 13.5C17.4998 12.66 19 11.62 19 9C19 5.61 16.55 2 12 2Z"
      />
    </svg>
    <div
      class="v-message-content"
    >
      <p
        class="v-mb-8"
      >
        This is required text that describes the section message in more detail.
      </p>
      <button
        class="v-button v-button-secondary"
      >
        Primary action
      </button>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples > Subtle section message with link should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-subtle v-section"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-visa v-icon-low v-icon-idea v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M16 22V24H8V22H16Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C17.63 0 21 4.58 21 9C21 12.66 18.7802 14.2104 17.4502 15.1504C17.1502 15.3604 16.86 15.56 16.71 15.71C16.23 16.18 16 17.59 16 20L15 21H9L8 20C8 18.0902 7.66999 16.0805 7.29004 15.7002C7.14004 15.5502 6.8498 15.3496 6.5498 15.1396C5.21977 14.2096 3 12.6597 3 9C3 4.58 6.37 0 12 0ZM12 2C7.45 2 5 5.61 5 9C5 11.62 6.5002 12.66 7.7002 13.5C8.08014 13.76 8.42999 14.0101 8.70996 14.29C9.64996 15.23 9.91047 17.53 9.98047 19H11V11H9V9H15V11H13V19H14.0098C14.0798 16.47 14.46 15.12 15.29 14.29C15.57 14.0101 15.9199 13.76 16.2998 13.5C17.4998 12.66 19 11.62 19 9C19 5.61 16.55 2 12 2Z"
      />
    </svg>
    <div
      class="v-message-content"
    >
      <p
        class="v-mb-8"
      >
        This is required text that describes the section message in more detail.
      </p>
      <a
        class="v-link"
        href="./section-message"
      >
        Destination label
      </a>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples > Subtle section message with title should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-subtle v-section"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-visa v-icon-low v-icon-idea v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M16 22V24H8V22H16Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C17.63 0 21 4.58 21 9C21 12.66 18.7802 14.2104 17.4502 15.1504C17.1502 15.3604 16.86 15.56 16.71 15.71C16.23 16.18 16 17.59 16 20L15 21H9L8 20C8 18.0902 7.66999 16.0805 7.29004 15.7002C7.14004 15.5502 6.8498 15.3496 6.5498 15.1396C5.21977 14.2096 3 12.6597 3 9C3 4.58 6.37 0 12 0ZM12 2C7.45 2 5 5.61 5 9C5 11.62 6.5002 12.66 7.7002 13.5C8.08014 13.76 8.42999 14.0101 8.70996 14.29C9.64996 15.23 9.91047 17.53 9.98047 19H11V11H9V9H15V11H13V19H14.0098C14.0798 16.47 14.46 15.12 15.29 14.29C15.57 14.0101 15.9199 13.76 16.2998 13.5C17.4998 12.66 19 11.62 19 9C19 5.61 16.55 2 12 2Z"
      />
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <h4
        class="v-typography-body-2-bold"
      >
        Error title
      </h4>
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples > Subtle section message without close icon button should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-subtle v-section"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-visa v-icon-low v-icon-idea v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M16 22V24H8V22H16Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C17.63 0 21 4.58 21 9C21 12.66 18.7802 14.2104 17.4502 15.1504C17.1502 15.3604 16.86 15.56 16.71 15.71C16.23 16.18 16 17.59 16 20L15 21H9L8 20C8 18.0902 7.66999 16.0805 7.29004 15.7002C7.14004 15.5502 6.8498 15.3496 6.5498 15.1396C5.21977 14.2096 3 12.6597 3 9C3 4.58 6.37 0 12 0ZM12 2C7.45 2 5 5.61 5 9C5 11.62 6.5002 12.66 7.7002 13.5C8.08014 13.76 8.42999 14.0101 8.70996 14.29C9.64996 15.23 9.91047 17.53 9.98047 19H11V11H9V9H15V11H13V19H14.0098C14.0798 16.47 14.46 15.12 15.29 14.29C15.57 14.0101 15.9199 13.76 16.2998 13.5C17.4998 12.66 19 11.62 19 9C19 5.61 16.55 2 12 2Z"
      />
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
  </div>
</div>
`;

exports[`Section message examples > Success section message with button should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-success v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="v-icon v-icon-visa v-icon-low v-icon-success v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M18 9.39551L10.5723 17L7 13.3418L8.3623 11.9473L10.5723 14.209L16.6377 8L18 9.39551Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C18.6168 0 24 5.38317 24 12C24 18.6168 18.6168 24 12 24C5.38317 24 0 18.6168 0 12C0 5.38317 5.38317 0 12 0ZM12 2.18164C6.58647 2.18164 2.18164 6.58647 2.18164 12C2.18164 17.4141 6.58647 21.8184 12 21.8184C17.4141 21.8184 21.8184 17.4141 21.8184 12C21.8184 6.58647 17.4141 2.18164 12 2.18164Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content"
    >
      <p
        class="v-mb-8"
      >
        This is required text that describes the section message in more detail.
      </p>
      <button
        class="v-button v-button-secondary"
      >
        Primary action
      </button>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples > Success section message with link should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-success v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="v-icon v-icon-visa v-icon-low v-icon-success v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M18 9.39551L10.5723 17L7 13.3418L8.3623 11.9473L10.5723 14.209L16.6377 8L18 9.39551Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C18.6168 0 24 5.38317 24 12C24 18.6168 18.6168 24 12 24C5.38317 24 0 18.6168 0 12C0 5.38317 5.38317 0 12 0ZM12 2.18164C6.58647 2.18164 2.18164 6.58647 2.18164 12C2.18164 17.4141 6.58647 21.8184 12 21.8184C17.4141 21.8184 21.8184 17.4141 21.8184 12C21.8184 6.58647 17.4141 2.18164 12 2.18164Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content"
    >
      <p
        class="v-mb-8"
      >
        This is required text that describes the section message in more detail.
      </p>
      <a
        class="v-link"
        href="./section-message"
      >
        Destination label
      </a>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples > Success section message with title should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-success v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="v-icon v-icon-visa v-icon-low v-icon-success v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M18 9.39551L10.5723 17L7 13.3418L8.3623 11.9473L10.5723 14.209L16.6377 8L18 9.39551Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C18.6168 0 24 5.38317 24 12C24 18.6168 18.6168 24 12 24C5.38317 24 0 18.6168 0 12C0 5.38317 5.38317 0 12 0ZM12 2.18164C6.58647 2.18164 2.18164 6.58647 2.18164 12C2.18164 17.4141 6.58647 21.8184 12 21.8184C17.4141 21.8184 21.8184 17.4141 21.8184 12C21.8184 6.58647 17.4141 2.18164 12 2.18164Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <h4
        class="v-typography-body-2-bold"
      >
        Success title
      </h4>
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples > Success section message without close icon button should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-success v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="v-icon v-icon-visa v-icon-low v-icon-success v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M18 9.39551L10.5723 17L7 13.3418L8.3623 11.9473L10.5723 14.209L16.6377 8L18 9.39551Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C18.6168 0 24 5.38317 24 12C24 18.6168 18.6168 24 12 24C5.38317 24 0 18.6168 0 12C0 5.38317 5.38317 0 12 0ZM12 2.18164C6.58647 2.18164 2.18164 6.58647 2.18164 12C2.18164 17.4141 6.58647 21.8184 12 21.8184C17.4141 21.8184 21.8184 17.4141 21.8184 12C21.8184 6.58647 17.4141 2.18164 12 2.18164Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
  </div>
</div>
`;

exports[`Section message examples > Warning section message with button should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-warning v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="v-icon v-icon-visa v-icon-low v-icon-warning v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M24 20.6602V23H0V20.6396L11.4102 0H13.7197L24 20.6602ZM2.08008 21H21.9297L12.5303 2.09961L2.08008 21Z"
      />
      <path
        class="v-icon-primary"
        d="M13.5 17.002V19.002H11.5V17.002H13.5ZM13.5 8.00195V15.002H11.5V8.00195H13.5Z"
      />
    </svg>
    <div
      class="v-message-content"
    >
      <p
        class="v-mb-8"
      >
        This is required text that describes the section message in more detail.
      </p>
      <button
        class="v-button v-button-secondary"
      >
        Primary action
      </button>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples > Warning section message with link should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-warning v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="v-icon v-icon-visa v-icon-low v-icon-warning v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M24 20.6602V23H0V20.6396L11.4102 0H13.7197L24 20.6602ZM2.08008 21H21.9297L12.5303 2.09961L2.08008 21Z"
      />
      <path
        class="v-icon-primary"
        d="M13.5 17.002V19.002H11.5V17.002H13.5ZM13.5 8.00195V15.002H11.5V8.00195H13.5Z"
      />
    </svg>
    <div
      class="v-message-content"
    >
      <p
        class="v-mb-8"
      >
        This is required text that describes the section message in more detail.
      </p>
      <a
        class="v-link"
        href="./section-message"
      >
        Destination label
      </a>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples > Warning section message with title should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-warning v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="v-icon v-icon-visa v-icon-low v-icon-warning v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M24 20.6602V23H0V20.6396L11.4102 0H13.7197L24 20.6602ZM2.08008 21H21.9297L12.5303 2.09961L2.08008 21Z"
      />
      <path
        class="v-icon-primary"
        d="M13.5 17.002V19.002H11.5V17.002H13.5ZM13.5 8.00195V15.002H11.5V8.00195H13.5Z"
      />
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <h4
        class="v-typography-body-2-bold"
      >
        Warning title
      </h4>
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples > Warning section message without close icon button should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-warning v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="v-icon v-icon-visa v-icon-low v-icon-warning v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M24 20.6602V23H0V20.6396L11.4102 0H13.7197L24 20.6602ZM2.08008 21H21.9297L12.5303 2.09961L2.08008 21Z"
      />
      <path
        class="v-icon-primary"
        d="M13.5 17.002V19.002H11.5V17.002H13.5ZM13.5 8.00195V15.002H11.5V8.00195H13.5Z"
      />
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
  </div>
</div>
`;
